<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.inprice</groupId>
  <artifactId>api</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <!-- package will created in target folder. look for the jar file, conf 
    and lib folders -->

  <!-- How to package : mvn clean install -->
  <!-- How to run : java -cp lib/*:./api-1.0.0.jar io.inprice.api.Application -->

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Versions -->
    <jdk.version>11</jdk.version>
    <maven-compiler.version>3.8.0</maven-compiler.version>
    <inprice-common.version>1.0.0</inprice-common.version>

    <javalin.version>3.13.10</javalin.version>
    <reflections.version>0.9.12</reflections.version>
    <json.version>20210307</json.version>
    <jjwt.version>0.11.2</jjwt.version>
    <junit.version>4.13.2</junit.version>
    <kong.version>3.11.12</kong.version>
    <embedded-redis.version>0.7.3</embedded-redis.version>
    <httpclient.version>4.5.13</httpclient.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.inprice</groupId>
      <artifactId>common</artifactId>
      <version>${inprice-common.version}</version>
    </dependency>

    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin</artifactId>
      <version>${javalin.version}</version>
    </dependency>

    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>${reflections.version}</version>
    </dependency>

    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${json.version}</version>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>${jjwt.version}</version>
    </dependency>
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-gson</artifactId>
      <version>${jjwt.version}</version>
      <scope>compile</scope> <!-- Not runtime -->
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.konghq</groupId>
      <artifactId>unirest-java</artifactId>
      <version>${kong.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>it.ozimov</groupId>
      <artifactId>embedded-redis</artifactId>
      <version>${embedded-redis.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-simple</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler.version}</version>
        <configuration>
					<release>${jdk.version}</release>
        </configuration>
      </plugin>

      <!-- Collecting all the necessary dependencies under lib folder -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <overWriteReleases>false</overWriteReleases>
              <overWriteSnapshots>false</overWriteSnapshots>
              <overWriteIfNewer>true</overWriteIfNewer>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>